fixed overflow, done!

--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ article {
   position: absolute;
   display: block;
   bottom: 0%;
-  text-align: left;
-  width: 100%;
+  text-align: center;
+  max-width: 95%;
   color: var(--MISC-FONT-COLOR);
-  font-size: 1rem;
+  font-size: 0.75rem;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 1rem 0.5rem;
 }
